hphp/test/zend/good/ext/dom/tests/bug38474.php.skipif
<?hh 
<<__EntryPoint>>
function main() {
  if (!extension_loaded('dom')) die('skip dom extension not available');
  if (version_compare(LIBXML_DOTTED_VERSION, "2.6.20", "<")) {
      print "skip libxml version " . LIBXML_DOTTED_VERSION;
  }
}
